--- a/styles/cavalluzzi.css
+++ b/styles/cavalluzzi.css
@@ -343,6 +343,26 @@ body-content-block {
     background-image: linear-gradient(to right, hsla(0, 0%, 10%, 0%) 15%, hsla(0, 0%, 10%, 100%) 75%);
 }
 
+.content-gradient-about-toys {
+    background-image: linear-gradient(to right, hsla(0, 0%, 0%, 0%) 0%, hsla(0, 0%, 0%, 90%) 30%);
+}
+
+.content-gradient-about-rain {
+    background-image: linear-gradient(to left, hsla(0, 0%, 0%, 0%) 15%, hsla(0, 0%, 0%, 50%) 75%);
+}
+
+.content-gradient-about-house {
+    background-image: linear-gradient(to right, hsla(0, 0%, 0%, 0%) 15%, hsla(0, 0%, 0%, 65%) 40%);
+}
+
+.content-gradient-about-tasks {
+    background-image: linear-gradient(to left, hsla(0, 0%, 0%, 0%) 15%, hsla(0, 0%, 0%, 90%) 40%);
+}
+
+.content-gradient-about-dreaming {
+    background-image: linear-gradient(to right, hsla(0, 0%, 0%, 0%) 25%, hsla(0, 0%, 0%, 85%) 50%);
+}
+
 body-content-image {
     position: absolute;
     height: 100%;
